--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.2",
     "@astrojs/tailwind": "^5.0.0",
     "@fontsource/barlow-condensed": "^5.0.8",
     "@fontsource/bellefair": "^5.0.8",
+    "@heroicons/react": "^2.0.18",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "astro": "^3.0.12",
     "flowbite": "^1.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3"
   }
 }
